CR: NBS reporting, batch-wise segregation, product visibility

--- a/templates/add_nbs_report.html
+++ b/templates/add_nbs_report.html
@@ -196,7 +196,7 @@
     const zomato = parseNum('zomato');
 
     // Net Sales = total_income - (swiggy + zomato)
-    const net_sales = total_income - (swiggy + zomato);
+    const net_sales = total_income + (swiggy + zomato);
 
     // Net Counter = upi + cash + misc_expense
     const upi = parseNum('upi');
