--- a/templates/misc_item_report.html
+++ b/templates/misc_item_report.html
@@ -28,25 +28,49 @@
       <div class="card-body">
         <form method="GET" action="/misc_item_report">
           <div class="row">
-            <div class="col-md-4">
-              <label for="date_from">From Date</label>
-              <input type="date" name="date_from" id="date_from" class="form-control"
-                value="{{ request.args.get('date_from', '') }}">
+            <div class="row">
+              <div class="col-md-4">
+                <label for="date_from">From Date</label>
+                <input type="date" name="date_from" id="date_from" class="form-control"
+                  value="{{ request.args.get('date_from', '') }}">
+              </div>
+              <div class="col-md-4">
+                <label for="date_to">To Date</label>
+                <input type="date" name="date_to" id="date_to" class="form-control"
+                  value="{{ request.args.get('date_to', '') }}">
+              </div>
+              <div class="col-md-3">
+                <label for="expense_type_id">Type of Expense</label>
+                <select name="expense_type_id" id="expense_type_id" class="form-control">
+                  <option value="">All</option>
+                  {% for et in expense_types %}
+                  <option value="{{ et.id }}" {% if request.args.get('expense_type_id')==et.id|string %}selected{% endif
+                    %}>{{
+                    et.type_name }}</option>
+                  {% endfor %}
+                </select>
+              </div>
+
+              <div class="col-md-3">
+                <label for="expense_subcategory_id">Subcategory</label>
+                <select name="expense_subcategory_id" id="expense_subcategory_id" class="form-control">
+                  <option value="">All</option>
+                  {% for sc in expense_subcategories %}
+                  <option value="{{ sc.id }}" {% if request.args.get('expense_subcategory_id')==sc.id|string
+                    %}selected{% endif %}>
+                    {{ sc.subcategory_name }}</option>
+                  {% endfor %}
+                </select>
+              </div>
             </div>
-            <div class="col-md-4">
-              <label for="date_to">To Date</label>
-              <input type="date" name="date_to" id="date_to" class="form-control"
-                value="{{ request.args.get('date_to', '') }}">
+            <div class="mt-3">
+              <button type="submit" class="btn btn-primary px-5">Filter</button>
+              <a href="/misc_item_report" class="btn btn-secondary px-5">Reset</a>
+              <button type="button" id="printButton" class="btn btn-secondary px-5" {% if not
+                (request.args.get('date_from') and request.args.get('date_to') and misc_items) %}disabled{% endif %}>
+                Print
+              </button>
             </div>
-          </div>
-          <div class="mt-3">
-            <button type="submit" class="btn btn-primary px-5">Filter</button>
-            <a href="/misc_item_report" class="btn btn-secondary px-5">Reset</a>
-            <button type="button" id="printButton" class="btn btn-secondary px-5" {% if not
-              (request.args.get('date_from') and request.args.get('date_to') and misc_items) %}disabled{% endif %}>
-              Print
-            </button>
-          </div>
         </form>
       </div>
     </div>
