--- a/templates/nbs_reports.html
+++ b/templates/nbs_reports.html
@@ -149,6 +149,31 @@
               </tr>
             </tfoot>
           </table>
+          <div class="d-flex justify-content-center mt-3">
+            <nav>
+              <ul class="pagination">
+                {% if page > 1 %}
+                <li class="page-item">
+                  <a class="page-link" href="?page={{ page-1 }}{% if selected_restaurant %}&restaurant_id={{ selected_restaurant }}{% endif %}{% if start_date %}&start_date={{ start_date }}{% endif %}{% if end_date %}&end_date={{ end_date }}{% endif %}">Previous</a>
+                </li>
+                {% endif %}
+
+                {% for p in range(1, total_pages+1) %}
+                <li class="page-item {% if p == page %}active{% endif %}">
+                  <a class="page-link" href="?page={{ p }}{% if selected_restaurant %}&restaurant_id={{ selected_restaurant }}{% endif %}{% if start_date %}&start_date={{ start_date }}{% endif %}{% if end_date %}&end_date={{ end_date }}{% endif %}">
+                    {{ p }}
+                  </a>
+                </li>
+                {% endfor %}
+
+                {% if page < total_pages %}
+                <li class="page-item">
+                  <a class="page-link" href="?page={{ page+1 }}{% if selected_restaurant %}&restaurant_id={{ selected_restaurant }}{% endif %}{% if start_date %}&start_date={{ start_date }}{% endif %}{% if end_date %}&end_date={{ end_date }}{% endif %}">Next</a>
+                </li>
+                {% endif %}
+              </ul>
+            </nav>
+          </div>
         </div>
       </div>
     </div>
